# pingora-proxy-manager

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main_patch.py  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-image.yml  release-please.yml  semantic-pr-title.yml
backend/: Cargo.toml
backend/src/: acme.rs  auth.rs  constants.rs  error.rs  main.rs  proxy.rs  state.rs  stream_manager.rs  tls_manager.rs
backend/src/api/: mod.rs  types.rs
backend/src/api/handlers/: access_lists.rs  auth.rs  certs.rs  hosts.rs  mod.rs  stats.rs  streams.rs  users.rs
backend/src/bootstrap/: db.rs  logging.rs  metrics.rs  mod.rs
backend/src/config/: loader.rs
backend/src/db/: access_lists.rs  certs.rs  hosts.rs  mod.rs  stats.rs  streams.rs  users.rs
backend/src/proxy/: connection_filter.rs  mod.rs
backend/src/proxy/filters/: acl.rs  acme.rs  mod.rs  redirect.rs  ssl.rs  trusted_proxy.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: LanguageSwitcher.tsx  mode-toggle.tsx
frontend/src/hooks/: useAccessLists.ts  useAuditLogs.ts  useCertificates.ts  useDnsProviders.ts  useHosts.ts  useLogs.ts  useStats.ts  (+1 more)
logs/: access.log.2025-12-04
wiki/: API-Documentation.md  Architecture.md  Build-Release.md  Configuration-Guide.md  Contributing-Guide.md  Deployment.md  Development-Setup.md  FAQ.md  Features.md  Getting-Started.md  Home.md  Project-Structure.md  _Sidebar.md
(+19 files in other folders)
